fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ h2{
 
 .button {
     height: 3.125em;
-    width: 19.375em;
+    width: 9.375em;
     color: rgba(38, 80, 120, 1);
     text-shadow: .1em .1em .2em rgba(0,0,0,.4);
     background-color: rgba(255, 255, 255, .5);
@@ -138,8 +138,7 @@ h2{
   width: 100%;
   height: 100vh;
   perspective: 0.063em;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   background: url("../images/tpbk.jpg") no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
